[package]
name = "trains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_egui = "0.21.0"
bevy_prototype_debug_lines = "0.11.1"
bevy_rapier2d = { version = "0.22.0", features = ["debug-render-2d"] }
bevy_window = "0.11.0"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
ron = "0.8.0"
serde = { version = "1.0.181", features = ["derive"] }
